// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardRepository should match snapshot 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 8,
      "padding": 8,
    }
  }
>
  <Text
    style={
      {
        "color": "#000000",
        "fontSize": 16,
        "fontWeight": "medium",
      }
    }
  >
    react
  </Text>
  <Text
    style={
      {
        "color": "#161B28",
        "fontSize": 8,
        "fontWeight": "light",
        "marginTop": 4,
      }
    }
  >
    facebook react
  </Text>
</View>
`;

exports[`CardRepository should match snapshot with different repository data 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 8,
      "padding": 8,
    }
  }
>
  <Text
    style={
      {
        "color": "#000000",
        "fontSize": 16,
        "fontWeight": "medium",
      }
    }
  >
    test-repo
  </Text>
  <Text
    style={
      {
        "color": "#161B28",
        "fontSize": 8,
        "fontWeight": "light",
        "marginTop": 4,
      }
    }
  >
    test-org test-repo
  </Text>
</View>
`;
